--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
+  "private": true,
   "name": "mpx-run-demo",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
-    "serve": "mpx-cli-service serve",
     "build": "mpx-cli-service build",
-    "lint": "eslint --ext .js,.ts,.mpx src/"
+    "format": "prettier . --write --log-level warn && prettier-package-json --write",
+    "preinstall": "only-allow pnpm",
+    "lint": "eslint --ext .js,.ts,.mpx src/",
+    "prepare": "husky || true",
+    "serve": "mpx-cli-service serve"
   },
   "dependencies": {
     "@mpxjs/api-proxy": "^2.10.0",
@@ -26,6 +29,7 @@
     "@babel/plugin-transform-runtime": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/runtime-corejs3": "^7.10.4",
+    "@commitlint/cli": "^19.8.0",
     "@mpxjs/babel-plugin-inject-page-events": "^2.9.0",
     "@mpxjs/eslint-config": "^2.0.3",
     "@mpxjs/mpx-cli-service": "^2.0.0",
@@ -34,18 +38,32 @@
     "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.0.0",
     "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.0.0",
     "@mpxjs/webpack-plugin": "^2.10.0",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.2.4",
+    "commitlint-config-gitmoji": "^2.3.1",
     "eslint": "^9.0.0",
+    "git-cz": "^4.9.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.5.1",
+    "only-allow": "^1.2.1",
     "postcss": "^8.2.6",
+    "prettier": "^3.3.3",
+    "prettier-package-json": "^2.8.0",
+    "pretty-quick": "^4.0.0",
     "process": "^0.11.10",
+    "rimraf": "^6.0.1",
     "stylus": "^0.55.0",
     "stylus-loader": "^6.1.0",
-    "typescript": "^4.1.3",
+    "typescript": "^5.7.2",
     "webpack": "^5.43.0"
+  },
+  "engines": {
+    "node": "20.x"
   },
   "browserslist": [
     "ios >= 8",
     "chrome >= 47"
-  ]
+  ],
+  "packageManager": "pnpm@10.8.1"
 }
