--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,22 +7,11 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "moduleResolution": "node",
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable"
-    ],
-    "types": [
-    ],
+    "lib": ["esnext", "dom", "dom.iterable"],
+    "types": [],
     "paths": {
-      "@/*": [
-        "src/*"
-      ]
+      "@/*": ["src/*"]
     }
   },
-  "exclude": [
-    "build",
-    "dist",
-    "config",
-  ]
+  "exclude": ["build", "dist", "config"]
 }
