--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,5 +1,5 @@
 {
   "package.json": ["prettier-package-json --write"],
-  "*.{mpx}": ["eslint --fix"],
-  "*.!{mpx}": ["eslint --fix", "prettier --write"]
+  "*.{js,ts,mpx}": ["eslint --fix"],
+  "*.{js,mjs,cjs,ts,json,md}": ["prettier --write"]
 }
