--- a/package.json
+++ b/package.json
@@ -3,22 +3,22 @@
   "name": "mpx-run-demo",
   "version": "0.1.0",
   "scripts": {
-    "build": "mpx-cli-service build",
+    "build": "mpx-cli-service build --targets=wx",
+    "build:h5": "mpx-cli-service build --targets=web",
     "commit": "git-cz",
     "format": "prettier . --write --log-level warn && prettier-package-json --write",
     "preinstall": "only-allow pnpm",
     "lint": "eslint --ext .js,.ts,.mpx src/",
     "prepare": "husky || true",
-    "serve": "mpx-cli-service serve"
+    "serve": "mpx-cli-service serve --targets=wx",
+    "serve:h5": "mpx-cli-service serve --targets=web"
   },
   "dependencies": {
     "@mpxjs/api-proxy": "^2.10.0",
     "@mpxjs/core": "^2.10.0",
     "@mpxjs/fetch": "^2.10.0",
-    "@mpxjs/pinia": "^2.10.0",
     "@mpxjs/store": "^2.10.0",
     "@mpxjs/utils": "^2.10.0",
-    "pinia": "^2.0.14",
     "vue": "^2.7.0",
     "vue-demi": "^0.14.6",
     "vue-i18n": "^8.27.2",
@@ -54,6 +54,7 @@
     "pretty-quick": "^4.0.0",
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
+    "sass-loader": "^16.0.5",
     "stylus": "^0.55.0",
     "stylus-loader": "^6.1.0",
     "typescript": "^5.7.2",
