--- a/static/wx/project.config.json
+++ b/static/wx/project.config.json
@@ -2,14 +2,40 @@
   "setting": {
     "newFeature": true,
     "urlCheck": true,
-    "es6": false,
+    "es6": true,
     "postcss": true,
-    "minified": false,
+    "minified": true,
     "checkSiteMap": false,
-    "autoAudits": false
+    "autoAudits": false,
+    "compileWorklet": false,
+    "uglifyFileName": false,
+    "uploadWithSourceMap": true,
+    "enhance": true,
+    "packNpmManually": false,
+    "packNpmRelationList": [],
+    "minifyWXSS": true,
+    "minifyWXML": true,
+    "localPlugins": false,
+    "disableUseStrict": false,
+    "useCompilerPlugins": false,
+    "condition": false,
+    "swc": false,
+    "disableSWC": true,
+    "babelSetting": {
+      "ignore": [],
+      "disablePlugins": [],
+      "outputPath": ""
+    }
   },
   "appid": "wx530ffd2f139c25d8",
   "projectname": "mpx-run-demo",
   "description": "A mpx project",
-  "condition": {}
+  "condition": {},
+  "compileType": "miniprogram",
+  "simulatorPluginLibVersion": {},
+  "packOptions": {
+    "ignore": [],
+    "include": []
+  },
+  "editorSetting": {}
 }
