--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "name": "mpx-run-demo",
   "version": "0.1.0",
   "scripts": {
-    "build": "mpx-cli-service build --targets=wx",
+    "build": "mpx-cli-service build --targets=wx,web,tt",
     "build:h5": "mpx-cli-service build --targets=web",
+    "build:tt": "mpx-cli-service build --targets=tt",
+    "build:wx": "mpx-cli-service build --targets=wx",
     "commit": "git-cz",
     "format": "prettier . --write --log-level warn && prettier-package-json --write",
     "preinstall": "only-allow pnpm",
     "lint": "eslint --ext .js,.ts,.mpx src/",
     "prepare": "husky || true",
-    "serve": "mpx-cli-service serve --targets=wx",
-    "serve:h5": "mpx-cli-service serve --targets=web"
+    "serve": "mpx-cli-service serve --targets=wx,web,tt",
+    "serve:h5": "mpx-cli-service serve --targets=web",
+    "serve:tt": "mpx-cli-service serve --targets=tt",
+    "serve:wx": "mpx-cli-service serve --targets=wx"
   },
   "dependencies": {
     "@mpxjs/api-proxy": "^2.10.0",
