--- a/.npmrc
+++ b/.npmrc
@@ -3,3 +3,4 @@ registry="https://registry.npmmirror.com"
 shamefully-hoist=true
 strict-peer-dependencies=false
 package-manager=pnpm
+loglevel=error
