--- a/package.json
+++ b/package.json
@@ -22,12 +22,7 @@
     "@mpxjs/core": "^2.10.0",
     "@mpxjs/fetch": "^2.10.0",
     "@mpxjs/store": "^2.10.0",
-    "@mpxjs/utils": "^2.10.0",
-    "vue": "^2.7.0",
-    "vue-demi": "^0.14.6",
-    "vue-i18n": "^8.27.2",
-    "vue-i18n-bridge": "^9.2.2",
-    "vue-router": "^3.1.3"
+    "@mpxjs/utils": "^2.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
@@ -42,6 +37,7 @@
     "@mpxjs/vue-cli-plugin-mpx": "^2.0.0",
     "@mpxjs/vue-cli-plugin-mpx-eslint": "^2.0.0",
     "@mpxjs/vue-cli-plugin-mpx-typescript": "^2.0.0",
+    "@mpxjs/vue-cli-plugin-mpx-web": "^1.6.30",
     "@mpxjs/webpack-plugin": "^2.10.0",
     "@total-typescript/ts-reset": "^0.6.1",
     "@vue/cli-service": "~5.0.0",
@@ -59,9 +55,13 @@
     "process": "^0.11.10",
     "rimraf": "^6.0.1",
     "sass-loader": "^16.0.5",
-    "stylus": "^0.55.0",
-    "stylus-loader": "^6.1.0",
+    "stylus-loader": "^8.1.2",
     "typescript": "^5.7.2",
+    "vue": "2.7.16",
+    "vue-demi": "^0.14.6",
+    "vue-i18n": "8.27.2",
+    "vue-i18n-bridge": "^9.2.2",
+    "vue-router": "^3.1.3",
     "webpack": "^5.43.0"
   },
   "engines": {
